commit menu corregido

--- a/form/signin.html
+++ b/form/signin.html
@@ -26,15 +26,15 @@
                                 <span>R</span>amón <span>S</span>errano.</a></li>
                         <li class="nav__item">
                             <a class="nav__link" aria-current="page" href="./signin.html">Sign
-                                in<button class="button" tabindex="1">
+                                in<button class="button submit" tabindex="1">
                                     <img src="https://cdn.iconscout.com/icon/free/png-64/login-1440156-1214657.png"
-                                        alt="sign-in" class="login__img"></button></a>
+                                        alt="sign-in" class="login__img submit"></button></a>
                         </li>
                         <li class="nav__item">
-                            <a class="nav__link" aria-current="page" href="./signup.html">Sign up<button class="button"
-                                    tabindex="0"><img
+                            <a class="nav__link" aria-current="page" href="./signup.html">Sign up<button
+                                    class="button submit" tabindex="0"><img
                                         src="https://cdn.iconscout.com/icon/premium/png-64-thumb/sign-up-4621286-3841288.png"
-                                        alt="sign-up" class="login__img"></button></a>
+                                        alt="sign-up" class="login__img submit"></button></a>
                         </li>
                     </ul>
                 </ng-container>
