--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <nav class="menu">
             <div class="container container-fluid">
                 <ng-container *ngIf="(user$ | async) === null; else logOutTemplate">
-                    <ul class="nav nav--hightlighted nav--sticky nav__open">
+                    <ul class="nav nav--hightlighted nav--sticky ">
                         <li class="nav__brand"><a class="rainbow rainbow_text_animated" [routerLink]="['/home']">
                                 <span>R</span>amón <span>S</span>errano.</a></li>
                         <li class="nav__item">
@@ -60,7 +60,7 @@
                 </ng-container>
 
                 <ng-container class="container">
-                    <ul class=" nav nav--hightlighted nav--sticky nav__open">
+                    <ul class=" nav nav--hightlighted nav--sticky ">
                         <li class="nav__item"><a href="#about">About</a></li>
                         <li class="nav__item"><a href="#skills">Skills</a></li>
                         <li class="nav__item"><a href="#projects">Projects</a></li>
@@ -68,7 +68,7 @@
                     </ul>
                 </ng-container>
                 <ng-template #logOutTemplate>
-                    <ul class="nav nav--hightlighted nav--sticky nav__open">
+                    <ul class="nav nav--hightlighted nav--sticky ">
                         <li class=" nav__item">
                             <a class="nav__link" aria-current="page" href="./" (click)="onLogout()">Logout<button
                                     class="button" tabindex="2"><img
