commit correccion menu nav

--- a/profile.html
+++ b/profile.html
@@ -271,8 +271,7 @@
                     class="fab fa-github fa-2x"></i></a></i>
         <i class="fa  w3-hover-opacity"><a href="https://www.linkedin.com/in/ramonserrano76/" target="_blank"><i
                     class="fab fa-linkedin fa-2x"></i></a></i>
-        <p class="w3-hover-opacity"><a href="https://ramonerrano76-portfolio.netlify.app/">Go to Main Page<i
-                    class="w3-hover-opacity"></i></a>
+        <p class="w3-hover-opacity"><a href="index.html">Go to Main Page<i class="w3-hover-opacity"></i></a>
         </p>
     </footer>
 
