--- a/public/index.html
+++ b/public/index.html
@@ -23,12 +23,6 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css"
-        integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous"> -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script> -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 
@@ -37,51 +31,41 @@
 <body>
 
     <header>
-        <div class="toggle"><i class="fas fa-2x fa-bars" data-bs-toggle="collapse"></i></div>
-        <nav class="menu">
-            <div class="container container-fluid">
-                <ng-container *ngIf="(user$ | async) === null; else logOutTemplate">
-                    <ul class="nav nav--hightlighted nav--sticky nav__open">
-                        <li class="nav__brand"><a class="rainbow rainbow_text_animated" [routerLink]="['/home']">
-                                <span>R</span>amón <span>S</span>errano.</a></li>
-                        <li class="nav__item">
-                            <a class="nav__link" aria-current="page" href="form/signin.html">Sign
-                                in<button class="button" tabindex="1">
-                                    <img src="https://cdn.iconscout.com/icon/free/png-64/login-1440156-1214657.png"
-                                        alt="sign-in" class="login__img"></button></a>
-                        </li>
-                        <li class="nav__item">
-                            <a class="nav__link" aria-current="page" href="form/signup.html">Sign up<button
-                                    class="button" tabindex="0"><img
-                                        src="https://cdn.iconscout.com/icon/premium/png-64-thumb/sign-up-4621286-3841288.png"
-                                        alt="sign-up" class="login__img"></button></a>
-                        </li>
-                    </ul>
-                </ng-container>
 
-                <ng-container class="container">
-                    <ul class=" nav nav--hightlighted nav--sticky nav__open">
-                        <li class="nav__item"><a href="#about">About</a></li>
-                        <li class="nav__item"><a href="#skills">Skills</a></li>
-                        <li class="nav__item"><a href="#projects">Projects</a></li>
-                        <li class="nav__item"><a href="#contact">Contact</a></li>
-                    </ul>
-                </ng-container>
-                <ng-template #logOutTemplate>
-                    <ul class="nav nav--hightlighted nav--sticky nav__open">
-                        <li class=" nav__item">
-                            <a class="nav__link" aria-current="page" href="./" (click)="onLogout()">Logout<button
-                                    class="button" tabindex="2"><img
-                                        src="https://cdn.iconscout.com/icon/premium/png-64-thumb/logout-2-110783.png"
-                                        alt="logout" class="login__img" (click)="onLogout()"></button></a>
-                        </li>
-                    </ul>
-                </ng-template>
-            </div>
+        <nav>
+            <!-- <ng-container *ngIf="(user$ | async) === null; else logOutTemplate"></ng-container> -->
+            <ul class="nav nav--hightlighted nav--sticky">
+                <li class="nav__brand"><a class="rainbow rainbow_text_animated" [routerLink]="['/home']">
+                        <span>R</span>amón <span>S</span>errano.</a></li>
+                <li class="nav__item">
+                    <a class="nav__link" aria-current="page" href="form/signin.html">Sign
+                        in<button class="" tabindex="1">
+                            <img src="https://cdn.iconscout.com/icon/free/png-64/login-1440156-1214657.png"
+                                alt="sign-in" class="login__img"></button></a>
+                </li>
+                <li class="nav__item">
+                    <a class="nav__link" aria-current="page" href="form/signup.html">Sign up<button class=""
+                            tabindex="0"><img
+                                src="https://cdn.iconscout.com/icon/premium/png-64-thumb/sign-up-4621286-3841288.png"
+                                alt="sign-up" class="login__img"></button></a>
+                </li>
+                <!-- <ng-container class="container"></ng-container> -->
+                <li class="nav__item"><a href="#about">About</a></li>
+                <li class="nav__item"><a href="#skills">Skills</a></li>
+                <li class="nav__item"><a href="#projects">Projects</a></li>
+                <li class="nav__item"><a href="#contact">Contact</a></li>
+                <li class="nav__item">
+                    <a class="nav__link" aria-current="page" href="./" (click)="onLogout()">Logout<button class=""
+                            tabindex="2"><img
+                                src="https://cdn.iconscout.com/icon/premium/png-64-thumb/logout-2-110783.png"
+                                alt="logout" class="login__img" (click)="onLogout()"></button></a>
+                </li>
+
+                <!-- <ng-template #logOutTemplate></ng-template> -->
+            </ul>
+            <div class="toggle"><i class="fas fa-2x fa-bars" data-bs-toggle="collapse"></i></div>
         </nav>
-
     </header>
-
     <main>
         <div id="about">
             <section>
@@ -98,7 +82,7 @@
                                     Designer</span><span class="">Freelancer</span><span class="">Petroleum
                                     Engineer</span></span></span></div>
                     <p class="about__paragraph">I'm Petroleum Engineer and an
-                        enthusiast FullStack Dev & Programmer.</p><a href="profile.html"><button
+                        enthusiast FullStack Dev & Programmer.</p><a href="profile.html" target="_blank"><button
                             class="btn-primary btn--color">Curriculum</button></a>
                 </div><img
                     src="https://media-exp1.licdn.com/dms/image/D4D35AQE4iIQEhJJ2Bw/profile-framedphoto-shrink_200_200/0/1637670953686?e=2147483647&v=beta&t=dYKycM_0Oxrl384aTiHcLvcmH8AklZgjuApO9BzNWs4"
@@ -320,13 +304,13 @@
                     </li>
                     <iframe class="spotify" src="https://open.spotify.com/embed/playlist/0b9ZiiZoK6mkQRjXOSWkQa"
                         frameBorder="0" allowfullscreen=""
-                        allow="autoplay ;clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+                        allow="ShuffleEnabled=true; shuffle=true; shuffle=0; autoplay=1; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
 
                 </div>
                 <div>
                     <div>
-                        <h2 class="contact__title">Contact me</h2>
+                        <!-- <h2 class="contact__title">Contact me</h2> -->
                     </div><a href="mailto:ramonserrano76@gmail.com" class=""><button
                             class="btn-secondary btn--degrade   ">Contact</button></a>
                     <div class="c-information">
@@ -373,10 +357,6 @@
     <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js"
         integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc"
         crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
-
     <!-- <canvas id="canvasMatrix"></canvas> -->
     <!-- <app-root></app-root> -->
     <!-- <script src="runtime.js" type="module"></script>
