--- a/public/profile.html
+++ b/public/profile.html
@@ -62,37 +62,37 @@
                                     class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
                         <p>HTML5 y CSS 3</p>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
-                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">60%
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%
                             </div>
                         </div>
                         <br>
                         <p>JavaScript</p>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
                             <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-                                <div class="w3-center w3-text-white">50%</div>
+                                <div class="w3-center w3-text-white">80%</div>
                             </div>
                         </div>
                         <br>
                         <p>SQL y bases de datos</p>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
-                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">50%</div>
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:75%">75%</div>
                         </div>
                         <br>
                         <p>Phyton</p>
                         <div class="w3-light-grey w3-round-xlarge w3-small">
-                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">70%</div>
+                            <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:50%">50%</div>
                         </div>
                         <br>
                         <p class="w3-large w3-text-theme"><b><i
                                     class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
                         <p>English</p>
                         <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
+                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:65%"></div>
                         </div>
                         <br>
                         <p>Spanish</p>
                         <div class="w3-light-grey w3-round-xlarge">
-                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+                            <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
                         </div>
                         <br>
                     </div>
@@ -271,8 +271,7 @@
                     class="fab fa-github fa-2x"></i></a></i>
         <i class="fa  w3-hover-opacity"><a href="https://www.linkedin.com/in/ramonserrano76/" target="_blank"><i
                     class="fab fa-linkedin fa-2x"></i></a></i>
-        <p class="w3-hover-opacity"><a href="https://ramonerrano76-portfolio.netlify.app/">Go to Main Page<i
-                    class="w3-hover-opacity"></i></a>
+        <p class="w3-hover-opacity"><a href="index.html">Go to Main Page<i class="w3-hover-opacity"></i></a>
         </p>
     </footer>
 
