--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <nav>
             <!-- <ng-container *ngIf="(user$ | async) === null; else logOutTemplate"></ng-container> -->
             <ul class="nav nav--hightlighted nav--sticky">
-                <li class="nav__brand"><a class=""  href=""><button  tabindex="0"><img
+                <li class="nav__brand"><a class=""  href="./"><button  tabindex="0"><img
                             src="https://argentinaprograma.inti.gob.ar/pluginfile.php/1/theme_moove/logo/1665787878/APLogo-20-20.png" width="90" ></button></a><a class="rainbow_text_animated" [routerLink]="['/home']">
                         <span>Ramón Serrano.</a></li>
                 <li class="nav__item">
